# psa-checker

./: .gitignore  .goreleaser.yml  README.md  charts_levels.md  charts_levels_a.md  charts_levels_b.md  charts_levels_c.md  charts_levels_d.md  charts_levels_e.md  charts_levels_f.md  charts_levels_g.md  charts_levels_h.md  charts_levels_i.md  charts_levels_j.md  charts_levels_k.md  charts_levels_l.md  charts_levels_m.md  charts_levels_n.md  charts_levels_o.md  charts_levels_p.md  charts_levels_q.md  charts_levels_r.md  charts_levels_s.md  charts_levels_t.md  charts_levels_u.md  charts_levels_v.md  charts_levels_w.md  charts_levels_x.md  charts_levels_y.md  charts_levels_z.md  coverprofile.out  go.mod  go.sum  main.go  makefile  sample.envrc
.github/workflows/: go-build.yaml  go-test-e2e.yaml  go-test-unit.yaml  release.yaml
cmd/psa-checker/: main.go  root.go  version.go
docs/: index.md
install/: install.ps1  install.sh
pkg/analyzer/: client.go  psaEvaluator.go  psaEvaluator_test.go
pkg/sample/: parameters.go
release/: config.example  config.yaml
test/: config.yaml  crd.yaml  cronjob.yaml  daemonset.yaml  deployment-v1beta1.yaml  in.yaml  multi.yaml  pod-baseline.yaml  pod-privileged.yaml  pod-restricted.yaml  serviceaccount.yaml  statefulset.yaml  test-fail.sh  test-success.sh
util/: ah_download.sh  iterate_charts.py
util/hub_eval/: makefile  pyproject.toml
util/hub_eval/hub_eval/: charts_lib.py  iterate_charts.py  templates.py  tools.py
util/hub_eval/src/: iterate_charts.py  write_table.py
util/hub_eval/tests/: test_hub_eval.py
(+6 files in other folders)
